--- a/src/main/resources/templates/timeline.html
+++ b/src/main/resources/templates/timeline.html
@@ -22,13 +22,13 @@
                     </div>
                     <div class="list-group">
                         <a href="#" class="list-group-item">
-                            <span class="badge">200</span>Seguindo
+                            <span class="badge" th:text="${followerQuantity}"></span>Seguindo
                         </a>
                         <a href="#" class="list-group-item">
-                            <span class="badge">180</span>Seguidores
+                            <span class="badge" th:text="${followedQuantity}"></span>Seguidores
                         </a>
                         <a href="#" class="list-group-item">
-                            <span class="badge">500</span>Animes
+                            <span class="badge" th:text="${registeredAnimesQuantity}"></span>Animes
                         </a>
                     </div>
                 </div>
