--- a/src/main/resources/templates/fragments/fragments.html
+++ b/src/main/resources/templates/fragments/fragments.html
@@ -34,6 +34,9 @@
 									<a href="/cadastrar-anime">Cadastrar Anime</a>
 								</li>
 								<li>
+									<a href="/animes-cadastrados">Animes Cadastrados</a>
+								</li>
+								<li>
 									<a href="/minhas-informacoes">Minhas Informações</a>
 								</li>
 								<li>
