--- a/src/main/resources/templates/fragments/fragments.html
+++ b/src/main/resources/templates/fragments/fragments.html
@@ -52,14 +52,14 @@
 						</li>
 					</ul>
 
-					<form class="navbar-form navbar-left">
+					<form th:action="${'/busca'}" method="GET" class="navbar-form navbar-left">
 						<div class="form-group">
-							<input type="text" class="form-control" placeholder="busca" />
+							<input type="text" name="palavra" class="form-control" placeholder="busca" />
 						</div>
 						<div class="form-group">
-							<select class="form-control">
-								<option value="">Animes</option>
-								<option value="">Pessoas</option>
+							<select name="filtro" class="form-control">
+								<option value="animes">Animes</option>
+								<option value="pessoas">Pessoas</option>
 							</select>
 						</div>
 						<button type="submit" class="btn btn-default">Buscar</button>
