--- a/src/main/resources/templates/fragments/fragments.html
+++ b/src/main/resources/templates/fragments/fragments.html
@@ -31,6 +31,9 @@
 							<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Configurações <span class="caret"></span></a>
 							<ul class="dropdown-menu">
 								<li>
+									<a href="/meu-perfil">Meu Perfil</a>
+								</li>
+								<li>
 									<a href="/cadastrar-anime">Cadastrar Anime</a>
 								</li>
 								<li>
