--- a/src/main/resources/templates/report.html
+++ b/src/main/resources/templates/report.html
@@ -8,12 +8,16 @@
         <div class="container">
 			<div class="row">
 				<div class="col-xs-12">
-                    <form th:action="${action}" method="POST" novalidate="novalidate">
+                    <form th:action="${formAction}" method="POST" novalidate="novalidate">
+                        <div class="alert alert-danger text-center" th:if="${error}" th:text="${error}"></div>
+						<div class="alert alert-success text-center" th:if="${success}" th:text="${success}"></div>
+
                         <div class="form-group">
                             <label for="report">Denúncia:</label>
-                            <textarea name="report" id="report" required="required"></textarea>
+                            <textarea name="report" id="report" class="form-control" required="required"></textarea>
                         </div>
-                        <button type="submit">Fazer Denúncia</button>
+                        <input type="hidden" name="id" th:value="${id}" />
+                        <button type="submit" class="btn btn-primary btn-block">Fazer Denúncia</button>
                     </form>
                 </div>
             </div>
