--- a/src/main/resources/templates/change-anime-image.html
+++ b/src/main/resources/templates/change-anime-image.html
@@ -8,13 +8,13 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-xs-12 col-sm-6 col-md-4 col-sm-offset-3 col-md-offset-4">
-					<form th:action="${'/alterar-imagem-anime' + anime.id}" method="post" enctype="multipart/form-data">
+					<form th:action="${'/alterar-imagem-anime/' + anime.id}" method="post" enctype="multipart/form-data">
 						<div class="alert alert-danger text-center" th:if="${error}" th:text="${error}"></div>
 						<div class="alert alert-success text-center" th:if="${success}" th:text="${success}"></div>
 
 						<div class="form-group">
 							<label for="image">Imagem do Anime <strong th:text="${anime.name}"></strong>:</label>
-							<input type="file" name="image" id="image" class="form-control" />
+							<input type="file" name="animeImage" id="image" class="form-control" />
 						</div>
 						<button type="submit" class="btn btn-block btn-primary">Atualizar</button>
 					</form>
