--- a/src/main/resources/templates/registered-animes.html
+++ b/src/main/resources/templates/registered-animes.html
@@ -17,7 +17,7 @@
 								<dl>
 									<dt>Cadastrador:</dt>
 									<dd>
-										<a th:href="${'/perfil/' + anime.user.username}" th:text="${anime.user.name}"></a>
+										<a th:href="${'/usuario/' + anime.user.username}" th:text="${anime.user.name}"></a>
 									</dd>
 									<dt>Criador:</dt>
 									<dd th:text="${anime.animeCreator.name}"></dd>
