--- a/src/main/resources/templates/anime.html
+++ b/src/main/resources/templates/anime.html
@@ -10,15 +10,15 @@
 				<div class="col-xs-12 col-sm-3">
 					<div class="well">
 						<img th:src="${animeImage}" th:alt="${anime.name}" class="img-responsive" />
-						
+
 						<hr />
 						
 						<div class="list-group">
-	                        <a th:href="${'/anime/' + anime.id + '/ja_vi'}" class="list-group-item text-center" th:classappend="${userInteraction == 'JA_VI'} ? list-group-item-success : ''">Já vi</a>
-	                        <a th:href="${'/anime/' + anime.id + '/estou_vendo'}" class="list-group-item text-center" th:classappend="${userInteraction == 'ESTOU_VENDO'} ? list-group-item-success : ''">Estou vendo</a>
-	                        <a th:href="${'/anime/' + anime.id + '/quero_ver'}" class="list-group-item text-center" th:classappend="${userInteraction == 'QUERO_VER'} ? list-group-item-success : ''">Quero ver</a>
+	                        <a th:href="${'/anime/' + anime.id + '/ja_vi'}" class="list-group-item text-center" th:classappend="${#strings.toString(userInteraction) == 'JA_VI'} ? list-group-item-success : ''">Já vi</a>
+	                        <a th:href="${'/anime/' + anime.id + '/estou_vendo'}" class="list-group-item text-center" th:classappend="${#strings.toString(userInteraction) == 'ESTOU_VENDO'} ? list-group-item-success : ''">Estou vendo</a>
+	                        <a th:href="${'/anime/' + anime.id + '/quero_ver'}" class="list-group-item text-center" th:classappend="${#strings.toString(userInteraction) == 'QUERO_VER'} ? list-group-item-success : ''">Quero ver</a>
 	                    </div>
-	                    
+
 						<dl>
 							<dt>Cadastrador:</dt>
 							<dd>
