--- a/src/main/resources/templates/timeline.html
+++ b/src/main/resources/templates/timeline.html
@@ -64,14 +64,9 @@
                         </div>
                         <div class="panel-body" th:utext="${post.post}"></div>
                         <div class="panel-footer">
-                            <div class="btn-group">
-                                <a href="" class="btn btn-success btn-xs">
-                                    <i class="glyphicon glyphicon-thumbs-up"></i> Curtir
-                                </a>
-                                <a th:href="${'/visualizar-postagem/' + post.id}" class="btn btn-success btn-xs">
-                                    <i class="glyphicon glyphicon-comment"></i> Comentar
-                                </a>
-                            </div>
+                            <a th:href="${'/visualizar-postagem/' + post.id}" class="btn btn-success btn-xs">
+                                <i class="glyphicon glyphicon-zoom-in"></i> Visualizar
+                            </a>
                         </div>
                     </div>
                 </div>
