--- a/src/main/resources/templates/error/404.html
+++ b/src/main/resources/templates/error/404.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-	<meta charset="UTF-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-	<title>Anime Note - Página não encontrada</title>
-</head>
-<body>
-	<h1>404 - Página não encontrada!</h1>
+<head th:replace="fragments/fragments :: head (title = '404 - Página não encontrada!')"></head>
+<body id="error404" class="background-full">
+	<header th:replace="fragments/fragments :: externalHeader"></header>
+
+	<main>
+		<div class="container">
+			<div class="row">
+				<div class="col-xs-12 col-sm-4 col-sm-offset-4">
+					<div class="alert alert-warning">404 - Página não encontrada!</div>
+					<a href="/" class="btn btn-success btn-block">Voltar para o início</a>
+				</div>
+			</div>
+		</div>
+	</main>
+
+	<footer th:replace="fragments/fragments :: footer"></footer>
 </body>
 </html>
