--- a/src/main/resources/templates/fragments/fragments.html
+++ b/src/main/resources/templates/fragments/fragments.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-BR" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head th:fragment="head (title)">
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -31,9 +31,6 @@
 							<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Configurações <span class="caret"></span></a>
 							<ul class="dropdown-menu">
 								<li>
-									<a href="/meu-perfil">Meu Perfil</a>
-								</li>
-								<li>
 									<a href="/cadastrar-anime">Cadastrar Anime</a>
 								</li>
 								<li>
@@ -48,8 +45,28 @@
 								<li>
 									<a href="/alterar-senha">Alterar Senha</a>
 								</li>
-								<li>
+							</ul>
+						</li>
+					</ul>
 
+					<ul class="nav navbar-nav" th:each="role : ${loggedUser.roles}" th:if="${role.name == 'ADMIN'}">
+						<li class="dropdown">
+							<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Administração <span class="caret"></span></a>
+							<ul class="dropdown-menu">
+								<li>
+									<a href="/numeros">Números</a>
+								</li>
+								<li>
+									<a href="/cadastrar-criador">Cadastrar Criador</a>
+								</li>
+								<li>
+									<a href="/cadastrar-categoria">Cadastrar Categoria</a>
+								</li>
+								<li>
+									<a href="/moderar-animes">Moderar Animes</a>
+								</li>
+								<li>
+									<a href="/moderar-postagens">Moderar Postagens</a>
 								</li>
 							</ul>
 						</li>
@@ -71,6 +88,8 @@
 					<form th:action="@{/logout}" method="post" class="navbar-form navbar-right">
 						<button type="submit" class="btn btn-default">Sair</button>
 					</form>
+
+					<p class="navbar-text navbar-right" th:text="${loggedUser.name}"></p>
 				</div>
 			</div>
 		</nav>
