--- a/src/main/resources/templates/fragments/fragments.html
+++ b/src/main/resources/templates/fragments/fragments.html
@@ -49,24 +49,24 @@
 						</li>
 					</ul>
 
-					<ul class="nav navbar-nav" th:each="role : ${loggedUser.roles}" th:if="${role.name == 'ADMIN'}">
+					<ul class="nav navbar-nav" th:if="${isAdmin}">
 						<li class="dropdown">
 							<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Administração <span class="caret"></span></a>
 							<ul class="dropdown-menu">
 								<li>
-									<a href="/numeros">Números</a>
+									<a href="/administracao/numeros">Números</a>
 								</li>
 								<li>
-									<a href="/cadastrar-criador">Cadastrar Criador</a>
+									<a href="/administracao/criadores">Criadores</a>
 								</li>
 								<li>
-									<a href="/cadastrar-categoria">Cadastrar Categoria</a>
+									<a href="/administracao/categorias">Categorias</a>
 								</li>
 								<li>
-									<a href="/moderar-animes">Moderar Animes</a>
+									<a href="/administracao/moderar-animes">Moderar Animes</a>
 								</li>
 								<li>
-									<a href="/moderar-postagens">Moderar Postagens</a>
+									<a href="/administracao/moderar-postagens">Moderar Postagens</a>
 								</li>
 							</ul>
 						</li>
