--- a/src/main/resources/templates/fragments/fragments.html
+++ b/src/main/resources/templates/fragments/fragments.html
@@ -68,6 +68,9 @@
 								<li>
 									<a href="/administracao/moderar-postagens">Moderar Postagens</a>
 								</li>
+								<li>
+									<a href="/administracao/moderar-comentarios">Moderar Comentários</a>
+								</li>
 							</ul>
 						</li>
 					</ul>
