--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -28,7 +28,7 @@
 							</form>
 							<a href="/esqueci-minha-senha" class="pull-right">Esqueci minha senha</a>
 							<hr />
-							<a href="/cadastro" class="btn btn-block btn-success">Novo por aqui? Faça seu cadastro aqui!</a>
+							<a href="/cadastro" class="btn btn-block btn-success">Novo por aqui? Faça seu cadastro!</a>
 						</div>
 					</div>
 				</div>
