--- a/src/main/resources/templates/followed.html
+++ b/src/main/resources/templates/followed.html
@@ -8,15 +8,14 @@
         <div class="container">
             <div class="row">
                 <div class="col-xs-12">
-                    <div class="alert alert-warning text-center" th:if="${size == 0}">Nenhum seguido encontrado.</div>
+                    <h2>Pessoas que você segue</h2>
                 </div>
-                <div class="col-xs-12 col-sm-3" th:if="${followed != null}" th:each="user : ${followed}">
-                    <div class="panel panel-default">
-                        <div class="panel-body">
-                            <strong class="center-block text-center">
-                                <a th:href="${'/usuario/' + user.followed.username}" th:text="${user.followed.name}"></a>
-                            </strong>
-                        </div>
+                <div class="col-xs-12">
+                    <div class="alert alert-warning text-center" th:if="${size == 0}">Você não está seguindo ninguém :(.</div>
+                </div>
+                <div class="col-xs-12">
+                    <div class="list-group">
+                        <a th:href="${'/usuario/' + user.followed.username}" class="list-group-item text-center" th:if="${followed != null}" th:each="user : ${followed}" th:text="${user.followed.name}"></a>
                     </div>
                 </div>
             </div>
