--- a/src/main/resources/templates/categories.html
+++ b/src/main/resources/templates/categories.html
@@ -5,8 +5,11 @@
 	<header th:replace="fragments/fragments :: internalHeader"></header>
 
 	<main>
-		<div class="container">
+		<div class="container" th:if="${isAdmin}">
 			<div class="row">
+				<div class="col-xs-12">
+                    <h2>Cadastro de Categorias</h2>
+                </div>
 				<div class="col-xs-12">
 					<div class="panel panel-default">
 						<div class="panel-body">
@@ -47,6 +50,14 @@
                 </table>
             </div>
 		</div>
+
+		<div class="container" th:if="${!isAdmin}">
+            <div class="row">
+                <div class="col-xs-12">
+                    <div class="alert alert-warning text-center">Você não tem permissão aqui.</div>
+                </div>
+            </div>
+        </div>
 	</main>
 
 	<footer th:replace="fragments/fragments :: footer"></footer>
