--- a/src/main/resources/templates/moderate-comments.html
+++ b/src/main/resources/templates/moderate-comments.html
@@ -5,7 +5,7 @@
 	<header th:replace="fragments/fragments :: internalHeader"></header>
 
 	<main>
-		<div class="container">
+		<div class="container" th:if="${isAdmin}">
             <div class="row">
                 <div class="col-xs-12">
                     <h2>Moderação de Comentários</h2>
@@ -34,6 +34,14 @@
                 </table>
             </div>
 		</div>
+
+		<div class="container" th:if="${!isAdmin}">
+            <div class="row">
+                <div class="col-xs-12">
+                    <div class="alert alert-warning text-center">Você não tem permissão aqui.</div>
+                </div>
+            </div>
+        </div>
 	</main>
 
 	<footer th:replace="fragments/fragments :: footer"></footer>
